--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ sudo: required
 services:
   - docker
 before_install:
-  - docker build -t alejotem11/react-app-test -f Dockerfile.dev ./react-app
+  - docker build -t alejotem11/react-app-test -f ./react-app/Dockerfile.dev ./react-app
 scripts:
   - docker run alejotem11/react-app-test npm test -- --coverage
 after_succes:
