--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ services:
   - docker
 before_install:
   - docker build -t alejotem11/react-app-test -f ./react-app/Dockerfile.dev ./react-app
-scripts:
+script:
   - docker run alejotem11/react-app-test npm test -- --coverage
 after_succes:
   - docker build -t alejotem11/react-app ./react-app
